Add --add-opens JVM arg for java.nio to startTomcat task