@@ -36,6 +36,7 @@ class StartTomcat extends DefaultTask
             "--add-opens=java.base/java.lang=ALL-UNNAMED",
             "--add-opens=java.base/java.io=ALL-UNNAMED",
             "--add-opens=java.base/java.util=ALL-UNNAMED",
+            "--add-opens=java.base/java.nio=ALL-UNNAMED",   // Needed for Snowflake JDBC
             "--add-opens=java.desktop/java.awt.font=ALL-UNNAMED",
             "--add-opens=java.base/java.text=ALL-UNNAMED"
     ]
